--- a/src/sass/base/utilities/_utilities.scss
+++ b/src/sass/base/utilities/_utilities.scss
@@ -1,22 +1,23 @@
 /* Core Utility Classes
   =========================================================================== */
 //content width
-$content-xs:     350px;
-$content-s:      600px;
-$content-m:      800px;
-$content-l:      1200px;
-$content-full:   auto;
+$content-xs: 350px;
+$content-s: 600px;
+$content-m: 800px;
+$content-l: 1200px;
+$content-full: auto;
 
 $widths: (
-  "-xs":    #{$content-xs},
-  "-s":     #{$content-s},
-  "-m":     #{$content-m},
-  "-l":     #{$content-l},
-  "-full":  "auto",
+  '-xs':    #{$content-xs},
+  '-s':     #{$content-s},
+  '-m':     #{$content-m},
+  '-l':     #{$content-l},
+  '-full':  'auto',
 );
 
 @each $width, $width-var in $widths {
   $max-width: if($width == '', '', #{$width-var});
+
   .content#{$width} { //.content-s
     max-width: #{$max-width} !important; //max-width: 600px;
   }
@@ -24,31 +25,31 @@ $widths: (
 
 //Spacing
 $space-xxs: 0.25rem;
-$space-xs:  0.5rem;
-$space-s:   0.75rem;
-$space-m:   1rem;
-$space-l:   1.5rem;
-$space-xl:  2rem;
+$space-xs: 0.5rem;
+$space-s: 0.75rem;
+$space-m: 1rem;
+$space-l: 1.5rem;
+$space-xl: 2rem;
 $space-xxl: 3rem;
 
 //SPACING UTILITY
 $spaceamounts: (
-  "space-xxs":  #{$space-xxs},
-  "space-xs":   #{$space-xs},
-  "space-s":    #{$space-s},
-  "space-m":    #{$space-m},
-  "space-l":    #{$space-l},
-  "space-xl":   #{$space-xl},
-  "space-xxl":  #{$space-xxl},
+  'space-xxs':  #{$space-xxs},
+  'space-xs':   #{$space-xs},
+  'space-s':    #{$space-s},
+  'space-m':    #{$space-m},
+  'space-l':    #{$space-l},
+  'space-xl':   #{$space-xl},
+  'space-xxl':  #{$space-xxl},
 );
 
 $sides: (
-  "":     "all",
-  "t":    "top",
-  "b":    "bottom",
-  "l":    "left",
-  "r":    "right",
-  "auto": "auto",
+  '':     'all',
+  't':    'top',
+  'b':    'bottom',
+  'l':    'left',
+  'r':    'right',
+  'auto': 'auto',
 );
 
 @each $space, $space-variable in $spaceamounts {
@@ -56,6 +57,7 @@ $sides: (
 
   @each $prefix, $value in $sides {
     $property: if($prefix == '', '', -#{$value});
+
     .m#{$prefix}-#{$space} { //.mb-space-xs
       margin#{$property}: #{$space-var} !important; //margin-bottom: space-xs;
     }
@@ -67,48 +69,76 @@ $sides: (
 }
 
 .screen-reader { //content is only "visible" to a screen reader
+  clip: rect(0 0 0 0);
   display: block;
   height: 1px;
-  width: 1px;
-  padding: 0;
   margin: -1px;
   overflow: hidden;
-  clip: rect(0 0 0 0);
-  white-space: nowrap;
+  padding: 0;
   position: absolute;
+  white-space: nowrap;
+  width: 1px;
 }
 
-.hide, .hidden, .is-hidden { display: none !important; }
+.hide,
+.hidden,
+.is-hidden { display: none !important; }
 
 //Hide on mobile
-.mobile-hide, .is-hidden_phone { @include hide-on('phone', $display: block); }
-.mobile-hide-inline, .is-hidden--inline_phone { @include hide-on('phone', $display: inline); }
+.mobile-hide,
+.is-hidden_phone { @include hide-on('phone', $display: block); }
+
+.mobile-hide-inline,
+.is-hidden--inline_phone { @include hide-on('phone', $display: inline); }
 
 //Hide on tablet
-.tablet-hide, .is-hidden_tablet { @include hide-on('tablet', $display: block); }
-.tablet-hide-inline, .is-hidden--inline_tablet { @include hide-on('tablet', $display: inline); }
+.tablet-hide,
+.is-hidden_tablet { @include hide-on('tablet', $display: block); }
+
+.tablet-hide-inline,
+.is-hidden--inline_tablet { @include hide-on('tablet', $display: inline); }
 
 //Hide on desktop
-.desktop-hide, .is-hidden_desktop { @media #{$desktop} { display: none; } }
+.desktop-hide,
+.is-hidden_desktop { @media #{$desktop} { display: none; } }
 
 //Add pointer cursor
-.pointer, .selectable { cursor: pointer !important; }
+.pointer,
+.selectable { cursor: pointer !important; }
 
 //Remove margin
-.remove-margin, .no-margin { margin: 0 !important; }
-.remove-margin--top, .no-margin--top { margin-top: 0 !important; }
-.remove-margin--right, .no-margin--right { margin-right: 0 !important; }
-.remove-margin--bottom, .no-margin--bottom { margin-bottom: 0 !important; }
-.remove-margin--left, .no-margin--left { margin-left: 0 !important; }
+.remove-margin,
+.no-margin { margin: 0 !important; }
+
+.remove-margin--top,
+.no-margin--top { margin-top: 0 !important; }
+
+.remove-margin--right,
+.no-margin--right { margin-right: 0 !important; }
+
+.remove-margin--bottom,
+.no-margin--bottom { margin-bottom: 0 !important; }
+
+.remove-margin--left,
+.no-margin--left { margin-left: 0 !important; }
 
 //Remove padding
-.remove-padding, .no-padding { padding: 0 !important; }
-.remove-padding--top, .no-padding--top { padding-top: 0 !important; }
-.remove-padding--right, .no-padding--right { padding-right: 0 !important; }
-.remove-padding--bottom, .no-padding--bottom { padding-bottom: 0 !important; }
-.remove-padding--left, .no-padding--left { padding-left: 0 !important; }
+.remove-padding,
+.no-padding { padding: 0 !important; }
 
-.remove-border { border: none !important; }
+.remove-padding--top,
+.no-padding--top { padding-top: 0 !important; }
+
+.remove-padding--right,
+.no-padding--right { padding-right: 0 !important; }
+
+.remove-padding--bottom,
+.no-padding--bottom { padding-bottom: 0 !important; }
+
+.remove-padding--left,
+.no-padding--left { padding-left: 0 !important; }
+
+.remove-border { border: 0 !important; }
 .float-left { float: left !important; }
 .float-right { float: right !important; }
 .float-none { float: none !important; }
@@ -117,7 +147,9 @@ $sides: (
 
 .text-color--white { color: $white; }
 .text-color--black { color: $black; }
-.text-color--gray, .text-color--grey { color: $gray; }
+
+.text-color--gray,
+.text-color--grey { color: $gray; }
 .text-color--blue { color: $blue; }
 .text-color--green { color: $green; }
 .text-color--orange { color: $orange; }
@@ -127,7 +159,7 @@ $sides: (
 
 //Flex utilities
 .space-between {
-  display: flex;
   align-items: center;
+  display: flex;
   justify-content: space-between;
 }
