--- a/src/sass/modules/_modules.scss
+++ b/src/sass/modules/_modules.scss
@@ -1,24 +1,24 @@
-@import "typography/typography";
-@import "grid/grid";
-@import "css-grid/css-grid";
+@import 'typography/typography';
+@import 'grid/grid';
+@import 'css-grid/css-grid';
 // @import "navigation/header";
-@import "forms/forms";
-@import "forms/themed-elements";
-@import "forms/card-controls";
-@import "actions/actions";
-@import "actions/button-group";
-@import "pagination/pagination";
-@import "tooltip/tooltip";
-@import "card/card";
-@import "modal/modal";
-@import "banner/banner";
-@import "table/table";
-@import "navigation/navigation";
-@import "overpanel/overpanel";//dependent on header being first
-@import "footer/footer";
-@import "icons/icons";
-@import "spinner/spinner";
-@import "tags/tags";
-@import "progress-stepper/progress-stepper";
-@import "lists/lists";
-@import "accordion/accordion";
+@import 'forms/forms';
+@import 'forms/themed-elements';
+@import 'forms/card-controls';
+@import 'actions/actions';
+@import 'actions/button-group';
+@import 'pagination/pagination';
+@import 'tooltip/tooltip';
+@import 'card/card';
+@import 'modal/modal';
+@import 'banner/banner';
+@import 'table/table';
+@import 'navigation/navigation';
+@import 'overpanel/overpanel';//dependent on header being first
+@import 'footer/footer';
+@import 'icons/icons';
+@import 'spinner/spinner';
+@import 'tags/tags';
+@import 'progress-stepper/progress-stepper';
+@import 'lists/lists';
+@import 'accordion/accordion';
