--- a/src/sass/base/colors/_colors.scss
+++ b/src/sass/base/colors/_colors.scss
@@ -1,135 +1,135 @@
 /* Color Scale
   ================================================== */
 
-$white:         #FFFFFF;
-$black:         #000000;
+$white: #fff;
+$black: #000;
 
 //brand colors
-$ui-purple: #9F65AE;
-$brand-light-gray: #EDEDED;
-$brand-gray: #D4D4D4;
-$brand-grey: #D4D4D4;
-$brand-black: #24292C;
+$ui-purple: #9f65ae;
+$brand-light-gray: #ededed;
+$brand-gray: #d4d4d4;
+$brand-grey: #d4d4d4;
+$brand-black: #24292c;
 $brand-blue: #28336d;
 
 //marketing colors
-$samaritan-purple: #AF93C5;
-$guidelines-purple_alt: #622E68;
-$guidelines-purple: #54377C;
-$paper: #FFFFFF;
-$barbi-world-pink: #EF557B;
-$receiver-orange: #F68B20;
-$executive-blue: #434E5B;
-$medical-blue: #6BC9D1;
-$sharing-blue: #71B9E0;
-$medical-green: #2EB9AB;
+$samaritan-purple: #af93c5;
+$guidelines-purple_alt: #622e68;
+$guidelines-purple: #54377c;
+$paper: #fff;
+$barbi-world-pink: #ef557b;
+$receiver-orange: #f68b20;
+$executive-blue: #434e5b;
+$medical-blue: #6bc9d1;
+$sharing-blue: #71b9e0;
+$medical-green: #2eb9ab;
 
 //ui-colors
-$ui-blue: #3F70C9;
-$ui-green: #09AA66;
-$ui-red: #DA3D30;
-$ui-orange: #FFA11F;
-$ui-white: #FFFFFF;
-$ui-black: #40464C;
+$ui-blue: #3f70c9;
+$ui-green: #09aa66;
+$ui-red: #da3d30;
+$ui-orange: #ffa11f;
+$ui-white: #fff;
+$ui-black: #40464c;
 
 //Flat gray color scale
-$gray-50:       #F2F2F2;
-$gray-100:      #EDEDED;
-$gray-150:      #E0E0E0;
-$gray-200:      #D4D4D4;
-$gray-250:      #C7C7C7;
-$gray-300:      #BABABA;
-$gray-400:      #A1A1A1;
-$gray-500:      #878787;
-$gray-600:      #6E6E6E;
-$gray-700:      #555555;
-$gray-800:      #3B3B3B;
-$gray-900:      #222222;
-$gray:          $gray-600;
+$gray-50: #f2f2f2;
+$gray-100: #ededed;
+$gray-150: #e0e0e0;
+$gray-200: #d4d4d4;
+$gray-250: #c7c7c7;
+$gray-300: #bababa;
+$gray-400: #a1a1a1;
+$gray-500: #878787;
+$gray-600: #6e6e6e;
+$gray-700: #555;
+$gray-800: #3b3b3b;
+$gray-900: #222;
+$gray: $gray-600;
 
 //Cool gray color scale
-$gray-50c:      #F5F6F7;
-$gray-100c:     #EDF1F2;
-$gray-150c:     #DDE2E6;
-$gray-200c:     #D2D5D9;
-$gray-250c:     #C4C8CD;
-$gray-300c:     #B6BBC2;
-$gray-400c:     #9CA3AA;
-$gray-500c:     #828B94;
-$gray-600c:     #6C747D;
-$gray-700c:     #575D64;
-$gray-800c:     #41464B;
-$gray-900c:     #24292C;
-$gray-cool:     $gray-600c;
+$gray-50c: #f5f6f7;
+$gray-100c: #edf1f2;
+$gray-150c: #dde2e6;
+$gray-200c: #d2d5d9;
+$gray-250c: #c4c8cd;
+$gray-300c: #b6bbc2;
+$gray-400c: #9ca3aa;
+$gray-500c: #828b94;
+$gray-600c: #6c747d;
+$gray-700c: #575d64;
+$gray-800c: #41464b;
+$gray-900c: #24292c;
+$gray-cool: $gray-600c;
 
-$blue-50:       #E9FFFF;
-$blue-100:      #D0F3FF;
-$blue-200:      #B7DAFF;
-$blue-300:      #9DC0FF;
-$blue-400:      #84A7ED;
-$blue-500:      #6A8DD3;
-$blue-600:      #5174BA;
-$blue-700:      #375AA0;
-$blue-800:      #1E4187;
-$blue-900:      #04276D;
-$blue:          $ui-blue;
+$blue-50: #e9ffff;
+$blue-100: #d0f3ff;
+$blue-200: #b7daff;
+$blue-300: #9dc0ff;
+$blue-400: #84a7ed;
+$blue-500: #6a8dd3;
+$blue-600: #5174ba;
+$blue-700: #375aa0;
+$blue-800: #1e4187;
+$blue-900: #04276d;
+$blue: $ui-blue;
 
-$green-50:      #ACFFEB;
-$green-100:     #93FFD2;
-$green-200:     #7AFEB9;
-$green-300:     #60E49F;
-$green-400:     #47CB86;
-$green-500:     #2DB16C;
-$green-600:     #149853;
-$green-700:     #007E39;
-$green-800:     #006520;
-$green-900:     #004B06;
-$green:         $ui-green;
+$green-50: #acffeb;
+$green-100: #93ffd2;
+$green-200: #7afeb9;
+$green-300: #60e49f;
+$green-400: #47cb86;
+$green-500: #2db16c;
+$green-600: #149853;
+$green-700: #007e39;
+$green-800: #006520;
+$green-900: #004b06;
+$green: $ui-green;
 
-$orange-50:     #FFFFB0;
-$orange-100:    #FFF997;
-$orange-200:    #FFE07E;
-$orange-300:    #FFC664;
-$orange-400:    #F7AD4B;
-$orange-500:    #DD9331;
-$orange-600:    #C47A18;
-$orange-700:    #AA6000;
-$orange-800:    #914700;
-$orange-900:    #772D00;
-$orange:        $ui-orange;
+$orange-50: #ffffb0;
+$orange-100: #fff997;
+$orange-200: #ffe07e;
+$orange-300: #ffc664;
+$orange-400: #f7ad4b;
+$orange-500: #dd9331;
+$orange-600: #c47a18;
+$orange-700: #aa6000;
+$orange-800: #914700;
+$orange-900: #772d00;
+$orange: $ui-orange;
 
-$purple-50:     #F4CBFF;
-$purple-100:    #DBB2E8;
-$purple-200:    #C299CF;
-$purple-300:    #A87FB5;
-$purple-400:    #8F669C;
-$purple-500:    #754C82;
-$purple-600:    #5C3369;
-$purple-700:    #42194F;
-$purple-800:    #290036;
-$purple-900:    #0F001C;
-$purple:        $ui-purple;
+$purple-50: #f4cbff;
+$purple-100: #dbb2e8;
+$purple-200: #c299cf;
+$purple-300: #a87fb5;
+$purple-400: #8f669c;
+$purple-500: #754c82;
+$purple-600: #5c3369;
+$purple-700: #42194f;
+$purple-800: #290036;
+$purple-900: #0f001c;
+$purple: $ui-purple;
 
-$red-50:        #FFCAB8;
-$red-100:       #FFB19F;
-$red-200:       #FF9886;
-$red-300:       #FF7E6C;
-$red-400:       #F76553;
-$red-500:       #DD4B39;
-$red-600:       #C43220;
-$red-700:       #AA1806;
-$red-800:       #910000;
-$red-900:       #770000;
-$red:           $ui-red;
+$red-50: #ffcab8;
+$red-100: #ffb19f;
+$red-200: #ff9886;
+$red-300: #ff7e6c;
+$red-400: #f76553;
+$red-500: #dd4b39;
+$red-600: #c43220;
+$red-700: #aa1806;
+$red-800: #910000;
+$red-900: #700;
+$red: $ui-red;
 
-$yellow-50:     #FFFFEF;
-$yellow-100:    #FFFFD6;
-$yellow-200:    #FFFFBD;
-$yellow-300:    #FFFFA3;
-$yellow-400:    #FFFF8A;
-$yellow-500:    #F2E670;
-$yellow-600:    #D9CD57;
-$yellow-700:    #BFB33D;
-$yellow-800:    #A69A24;
-$yellow-900:    #8C800A;
-$yellow:        $yellow-500;
+$yellow-50: #ffffef;
+$yellow-100: #ffffd6;
+$yellow-200: #ffffbd;
+$yellow-300: #ffffa3;
+$yellow-400: #ffff8a;
+$yellow-500: #f2e670;
+$yellow-600: #d9cd57;
+$yellow-700: #bfb33d;
+$yellow-800: #a69a24;
+$yellow-900: #8c800a;
+$yellow: $yellow-500;
