--- a/src/sass/base/extendables/_extendables.scss
+++ b/src/sass/base/extendables/_extendables.scss
@@ -4,15 +4,15 @@
 %clearfix { overflow: auto; }
 
 %remove-list-style {
+  list-style: none;
   margin: 0;
   padding: 0;
-  list-style: none;
 }
 
 /* Icon Extendables
 =========================================================================== */
 //TO DO: Add more colors for icons
-%icon-white { i:before { color: $white !important; } }
+%icon-white { i::before { color: $white !important; } }
 
 /* Shadow Extendables
 =========================================================================== */
@@ -20,13 +20,13 @@
 %shadow-100 { @include box-shadow(0 4px 8px rgba(0,0,0, 0.3)); }
 %shadow-200 { @include box-shadow(0 4px 16px rgba(0,0,0, 0.3)); }
 %shadow-300 { @include box-shadow(0 4px 24px rgba(0,0,0, 0.3)); }
-%card-shadow { @include box-shadow--multiple(0 1px 1px 0 rgba(60,64,67,.08), 0 1px 3px 1px rgba(60,64,67,.16)); }
-%card-shadow--hover { @include box-shadow--multiple(0 1px 3px 1px rgba(60,64,67,.2), 0 2px 8px 4px rgba(60,64,67,.1)); }
+%card-shadow { @include box-shadow--multiple(0 1px 1px 0 rgba(60,64,67,0.08), 0 1px 3px 1px rgba(60,64,67,0.16)); }
+%card-shadow--hover { @include box-shadow--multiple(0 1px 3px 1px rgba(60,64,67,0.2), 0 2px 8px 4px rgba(60,64,67,0.1)); }
 
 
 /* Action Extendables
   =========================================================================== */
-%button--round  { border-radius: 50px; }
+%button--round { border-radius: 50px; }
 %button--smooth { border-radius: 5px; }
 %button--square { border-radius: 0; }
 
@@ -36,11 +36,13 @@
   &::-webkit-scrollbar-button { background-color: transparent; }
   &::-webkit-scrollbar-corner { background-color: transparent; }
   &::-webkit-scrollbar-track { background-color: transparent; }
+
   &::-webkit-scrollbar {
     background-color: transparent;
     height: 20px;
     width: 15px;
   }
+
   &::-webkit-scrollbar-thumb {
     background-clip: content-box;
     background-color: $gray-400c;
@@ -54,11 +56,13 @@
   &::-webkit-scrollbar-button { background-color: transparent; }
   &::-webkit-scrollbar-corner { background-color: transparent; }
   &::-webkit-scrollbar-track { background-color: transparent; }
+
   &::-webkit-scrollbar {
     background-color: transparent;
     height: 20px;
     width: 15px;
   }
+
   &::-webkit-scrollbar-thumb {
     background-clip: content-box;
     background-color: rgba($gray-200c, 0.3);
