--- a/src/sass/experimental/placeholder.scss
+++ b/src/sass/experimental/placeholder.scss
@@ -15,46 +15,48 @@ This is an EXPERIMENT and is not ready to be included in production!
 $container-colors: transparent;//#413552
 
 .logo {
-  width: 10.75rem;
-  height: 4rem;
   background-color: $container-colors;
+  height: 4rem;
+  width: 10.75rem;
 }
 
 .crumbs {
-  margin-left: 0;
-  padding-left: 1rem;
   color: #fff;
   font-weight: 600;
+  margin-left: 0;
   margin-right: auto;
+  padding-left: 1rem;
 
   @media #{$tablet} {
-    padding-left: 2rem;
     color: $black;
+    padding-left: 2rem;
   }
 }
 
 .profile {
-  cursor: pointer;
-  width: auto;
+  @extend %icon-white;
   border-radius: 5px;
-  padding: $space-xs;
   color: $white;
+  cursor: pointer;
+  padding: $space-xs;
+  width: auto;
 
   .profile-image {
-    height: 2rem;
-    width: 2rem;
     background-color: $white;
     border-radius: 50%;
-    position: relative;
+    height: 2rem;
     margin-right: $space-xs;
+    position: relative;
+    width: 2rem;
+
     .initials {
-      height: 2rem;
-      width: 2rem;
-      position: absolute;
-      display: flex;
       align-items: center;
-      justify-content: center;
       color: $black;
+      display: flex;
+      height: 2rem;
+      justify-content: center;
+      position: absolute;
+      width: 2rem;
     }
   }
 
@@ -66,37 +68,43 @@ $container-colors: transparent;//#413552
       display: inline-block;
     }
   }
-  @extend %icon-white;
 }
 
 .alert {
-  width: 2rem;
-  height: 2rem;
-  border-radius: 50px;
   background-color: $container-colors;
+  border-radius: 50px;
+  height: 2rem;
   margin-left: 0.5rem;
   position: relative;
-  .dashing-icon::before { color: #f5cd66; font-size: 1.5rem; }
+  width: 2rem;
+
+  .dashing-icon::before { color: #f5cd66;
+    font-size: 1.5rem; }
 
   .count {
-  	position: absolute;
-  	bottom: 1rem;
-  	right: 1rem;
-  	background-color: $red-500;
-  	border-radius: 50px;
-  	color: $white;
+    background-color: $red-500;
+    border-radius: 50px;
+    bottom: 1rem;
+    color: $white;
     font-weight: bold;
-    padding: 0rem 0.25rem;
-    text-align: center;
     min-width: 1.25rem;
+    padding: 0 0.25rem;
+    position: absolute;
+    right: 1rem;
+    text-align: center;
   }
 }
 
-.logo, .profile, .alert {
+.logo,
+.profile,
+.alert {
+  align-items: center;
   display: flex;
   justify-content: center;
-  align-items: center;
 }
 
 .alert { margin-left: auto; }
-.logo, .header-nav { display: none; @media #{$tablet} { display: flex; } }
+
+.logo,
+.header-nav { display: none;
+  @media #{$tablet} { display: flex; } }
