--- a/src/sass/experimental/x-paragon.scss
+++ b/src/sass/experimental/x-paragon.scss
@@ -1,8 +1,8 @@
-@import "../vendor/vendor";
-@import "../base/base";
-@import "../modules/modules";
+@import '../vendor/vendor';
+@import '../base/base';
+@import '../modules/modules';
 
-@import "experimental";
+@import 'experimental';
 
 @font-face {
   font-family: 'dashing-icons';
