--- a/src/sass/modules/card/_card.scss
+++ b/src/sass/modules/card/_card.scss
@@ -4,13 +4,17 @@
 //TODO remove .card--header, .card--content, .card--footer with major release
 
 .card {
+  @extend %card-shadow;
   background-color: $white;
   border-radius: 5px;
   margin: 1.5rem auto;
-  @extend %card-shadow;
 
-  .card--header, &.card--content, &.card--footer,
-  .card-header, &.card-content, &.card-footer {
+  .card--header,
+  &.card--content,
+  &.card--footer,
+  .card-header,
+  &.card-content,
+  &.card-footer {
     hr { margin: ($grid-gutter) 0; }
   }
 
@@ -21,15 +25,21 @@
   .card-header {
     padding: $grid-gutter $grid-gutter 0 $grid-gutter;
     padding-bottom: 0;
+
     &.has-border {
       border-bottom: 2px solid $gray-100;
       padding-bottom: $grid-gutter;
+
       +.card--content .card-banner,
-      +.card-content .card-banner  {
+      +.card-content .card-banner {
         margin-top: -$grid-gutter;
       }
     }
-    h1, h2, h3, h4 { margin-bottom: 0; } //removes default margin-bottom in card-headers
+    
+    h1,
+    h2,
+    h3,
+    h4 { margin-bottom: 0; } //removes default margin-bottom in card-headers
   }
 
 
@@ -42,6 +52,7 @@
   .card--footer,
   .card-footer {
     padding: 0 $grid-gutter $grid-gutter $grid-gutter;
+
     &.has-border {
       border-top: 2px solid $gray-100;
       padding-top: $grid-gutter;
@@ -67,10 +78,10 @@
   &.is-disabled,
   &.is-selectable.is-disabled,
   &.is-selectable.disabled {
-    opacity: 0.4;
-    pointer-events: none;
     background-color: $gray-200;
     box-shadow: none;
+    opacity: 0.4;
+    pointer-events: none;
   }
 
   &.card--dashed {
@@ -78,21 +89,25 @@
     box-shadow: none;
   }
 
-  .card--narrow{
+  .card--narrow {
     max-width: 750px;
   }
 
-  .card--list, .card-list {
+  .card--list,
+  .card-list {
+    list-style: none;
     margin: 0;
     padding: 0;
-    list-style: none;
-     li {
+
+    li {
       padding: 0.75rem;
       transition: $global-transition;
     }
-     &.is-selectable {
+
+    &.is-selectable {
       li {
         cursor: pointer;
+
         &:hover {
           background-color: $gray-100;
         }
@@ -101,31 +116,37 @@
   }
   //Table within Card
   .card-table {
-    overflow-x: auto;
     border-radius: 0 0 5px 5px;
+    overflow-x: auto;
+
     .table,
     table {
-      margin-top: $grid-gutter !important;
       border-radius: 0 0 5px 5px;
+      margin-top: $grid-gutter !important;
+
       th {
-        border-top: 2px solid;
-        border-color: $gray-200;
-        padding: $space-xs $space-m !important;
         background-color: $gray-100;
+        border-color: $gray-200;
+        border-top: 2px solid;
+        padding: $space-xs $space-m !important;
       }
+
       &.has-arrow {
-        th,tr {
-          td:last-of-type  {
+        th,
+        tr {
+          td:last-of-type {
             width: 3rem;
           }
         }
       }
+
       &.is-selectable {
         tbody tr {
           transition: $global-transition;
+
           &:hover {
-            cursor: pointer;
             background-color: $gray-100;
+            cursor: pointer;
           }
         }
       }
@@ -137,8 +158,8 @@
 .grid {
   :not(.checkbox-card):not(.radio-card):not(.card-content) > .card {
     @media #{$phone} {
-      margin: 0 -#{$grid-gutter} $grid-gutter -#{$grid-gutter};
       border-radius: 0;
+      margin: 0 -#{$grid-gutter} $grid-gutter -#{$grid-gutter};
     }
     @media #{$tablet} {
       margin: 0 0 $grid-gutter 0;
@@ -151,40 +172,47 @@
   =========================================================================== */
 .card.is-loading {
   overflow: hidden;
-  .card-header, .card--header,
-  .card-content, .card--content,
-  .card-footer, .card--footer {
+
+  .card-header,
+  .card--header,
+  .card-content,
+  .card--content,
+  .card-footer,
+  .card--footer {
     overflow: hidden;
+
     * { //Targets all elements inside the card header, content, and footer
-      position: relative;
       background-color: $gray-100;
       border-radius: 3px;
       height: 1.25rem;
+      position: relative;
 
       &::after {
-        display: block;
-        content: '';
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        transform: translateX(-100%);
-        background: linear-gradient(90deg, transparent, rgba(255, 255, 255, .7), transparent);
         animation: loadingCard 1.2s infinite;
+        background: linear-gradient(90deg, transparent, rgba(255, 255, 255, 0.7), transparent);
+        content: '';
+        display: block;
+        height: 100%;
+        position: absolute;
         top: 0;
+        transform: translateX(-100%);
+        width: 100%;
       }
     }
   }
+
   .card-header,
   .card--header {
     * {
       width: 200px; //Sets a static width for the header
     }
   }
+
   .card-footer,
   .card--footer {
     * {
-      width: 100px; //Sets a static width for footer buttons
       margin: 0;
+      width: 100px; //Sets a static width for footer buttons
     }
   }
 }
