--- a/src/sass/modules/css-grid/_css-grid.scss
+++ b/src/sass/modules/css-grid/_css-grid.scss
@@ -1,4 +1,4 @@
-@import "css-grid-mixins";
-@import "css-grid-fallbacks";
-@import "css-grid-utilities";
-@import "css-grid-main";
+@import 'css-grid-mixins';
+@import 'css-grid-fallbacks';
+@import 'css-grid-utilities';
+@import 'css-grid-main';
