--- a/src/sass/modules/css-grid/css-grid-main.scss
+++ b/src/sass/modules/css-grid/css-grid-main.scss
@@ -3,43 +3,60 @@ Actual CSS Grid Classes
 -------------------------------- */
 //mimics '.row' from original grid
 .grid-wrapper {
-	max-width: $global-content-width;
-	margin: auto;
-  	width: 100%;
+  margin: auto;
+  max-width: $global-content-width;
+  width: 100%;
 }
 
 //use grid to make a new 12 column grid
-.grid {//IE and Safari
+.grid {
 
-	//Pad the grid
-	&.grid-padding {
-		padding: $grid-gutter;
-		// @supports(display: grid) {
-			// padding: $grid-gutter 0;
-			// @media #{$tablet}{
-			// 	padding: $grid-gutter;
-			// }
-		// }
-	}
+  display: block;
 
-	display: block;//For IE and Safari mobile
-	overflow: auto;//For IE and Safari display
-	@supports(display: grid) { display: grid; grid-gap: 0; @media #{$tablet} { grid-gap: $grid-gutter; } }//For non-fallbacks use grid
+  grid-template-columns: repeat(12, 1fr);
+  overflow: auto;
 
-	* {
-		@supports(display: grid) { @include grid-column(12); width: auto; }//By default, content will span all 12 columns
-	}
+  //Pad the grid
+  &.grid-padding {
+    padding: $grid-gutter;
+    // @supports(display: grid) {
+    // padding: $grid-gutter 0;
+    // @media #{$tablet}{
+    // 	padding: $grid-gutter;
+    // }
+    // }
+  }
 
-	grid-template-columns: repeat(12, 1fr);
-	//12 10 9 8 6 4 3 2
-	.grid--full,          .grid-12  { @include grid-column(12); }
-	.grid--five-sixths,   .grid-10  { @include grid-column(10); }
-	.grid--three-fourths, .grid-9   { @include grid-column(9); }
-	.grid--two-thirds,    .grid-8   { @include grid-column(8); }
-	.grid--half,          .grid-6   { @include grid-column(6); }
-	.grid--third,         .grid-4   { @include grid-column(4); }
-	.grid--fourth,        .grid-3   { @include grid-column(3); }
-	.grid--sixth,         .grid-2   { @include grid-column(2); }
+  * {
+    @supports(display: grid) { @include grid-column(12); width: auto; }//By default, content will span all 12 columns
+  }
+  //12 10 9 8 6 4 3 2
+  .grid--full,
+  .grid-12 { @include grid-column(12); }
+
+  .grid--five-sixths,
+  .grid-10 { @include grid-column(10); }
+
+  .grid--three-fourths,
+  .grid-9 { @include grid-column(9); }
+
+  .grid--two-thirds,
+  .grid-8 { @include grid-column(8); }
+
+  .grid--half,
+  .grid-6 { @include grid-column(6); }
+
+  .grid--third,
+  .grid-4 { @include grid-column(4); }
+
+  .grid--fourth,
+  .grid-3 { @include grid-column(3); }
+  
+  .grid--sixth,
+  .grid-2 { @include grid-column(2); }//IE and Safari//For IE and Safari mobile//For IE and Safari display
+  @supports(display: grid) { display: grid;
+    grid-gap: 0;
+    @media #{$tablet} { grid-gap: $grid-gutter; } }//For non-fallbacks use grid
 }
 
 .grid { .card { margin: 0; } } //required to span cards 100%
