--- a/src/sass/modules/footer/footer.scss
+++ b/src/sass/modules/footer/footer.scss
@@ -2,20 +2,20 @@ $footer-color: $white !default; //Override this variable to change the color of 
 $footer-border-color: $gray-200 !default; //Override this variable to change the color of the top border of your footer
 
 .app-footer {
-  background-color: rgba($footer-color, .95);
+  background-color: rgba($footer-color, 0.95);
   border-top: 2px solid $footer-border-color;
-  box-shadow: 0 -2px 30px 0 rgba($gray-900c, .15);
+  box-shadow: 0 -2px 30px 0 rgba($gray-900c, 0.15);
   float: left;
+  left: 0;
   max-width: 100%;
   padding: 1rem;
   position: absolute;
-  left: 0;
   width: 100%;
 
   &.fixed {
-    position: fixed;
     bottom: 0;
     left: 0;
+    position: fixed;
     right: 0;
   }
 
