--- a/src/sass/modules/forms/forms.scss
+++ b/src/sass/modules/forms/forms.scss
@@ -1,9 +1,9 @@
 $inputs: 'select, textarea,input[type="date"],input[type="time"],input[type="email"],input[type="month"],input[type="number"],input[type="password"],input[type="tel"],input[type="text"]';
 
 fieldset {
-  border: none;
-  padding: 0;
+  border: 0;
   margin: 0;
+  padding: 0;
 
   label {
     display: block;
@@ -14,10 +14,10 @@ fieldset {
 
     &.inline {
       @include user-select(none);
-      font-size: $font-size-normal;
-      display: inline-block;
-      font-weight: normal;
       cursor: pointer;
+      display: inline-block;
+      font-size: $font-size-normal;
+      font-weight: normal;
     }
   }
 
@@ -29,11 +29,11 @@ fieldset {
     border: 2px solid $gray-150;
     border-radius: 5px;
     font-size: $font-size-normal;
+    //EXPERIMENTAL
+    margin-bottom: $space-m;
     max-width: 100%;
     padding: 0.6rem;
     width: 100%;
-    //EXPERIMENTAL
-    margin-bottom: $space-m;
 
     &:focus {
       border-color: $blue;
@@ -49,27 +49,29 @@ fieldset {
     }
   }
 
-  input[type="date"],
-  input[type="time"],
-  input[type="month"] {
-    min-height: 2.75rem;
+  input[type='date'],
+  input[type='time'],
+  input[type='month'] {
     max-height: 2.75rem;
+    min-height: 2.75rem;
+
     &::-webkit-inner-spin-button,
     &::-webkit-calendar-picker-indicator {
-      display: none;
       -webkit-appearance: none;
+      display: none;
     }
   }
 
   input[type=checkbox],
   input[type=radio] {
     float: left;
-    margin-top: 0.3rem;
     margin-right: 0.5rem;
+    margin-top: 0.3rem;
   }
 
   textarea {
     resize: vertical;
+
     .grid & {
       width: 100%; //needed to support css-grid
     }
@@ -77,6 +79,7 @@ fieldset {
 
   select {
     cursor: pointer;
+
     .grid & {
       width: 100%; //needed to support css-grid
     }
@@ -88,6 +91,7 @@ fieldset {
     margin-bottom: $space-m;
 
     #{$inputs} { margin-bottom: 0; }
+
     select {
       padding-right: $space-xl;
       width: auto !important;
@@ -95,7 +99,7 @@ fieldset {
 
     .add-on--before {
       border-radius: 5px 0 0 5px;
-      border-right: none;
+      border-right: 0;
       flex: 1;
     }
 
@@ -106,7 +110,8 @@ fieldset {
       &.button--border {
         @include border--button($gray-150); //makes button border the same color as the input
         color: $gray-500;
-        .dashing-icon:before {
+
+        .dashing-icon::before {
           color: $gray-500;
         }
       }
@@ -117,9 +122,10 @@ fieldset {
   &.select--has-icon,
   .select--has-icon {
     position: relative;
-    &:after {
-      content: '\e800';
+
+    &::after {
       color: $gray-400;
+      content: '\e800';
       font-family: 'dashing-icons';
       font-size: 12px;
       font-weight: 600;
@@ -130,19 +136,20 @@ fieldset {
     }
 
     .grid & { //supports select positioning in grid
-      &:after {
+      &::after {
         right: 1rem;
       }
     }
 
-    &.has-error:after { color: $red-400; }
-    &.has-warning:after { color: $orange-400; }
+    &.has-error::after { color: $red-400; }
+    &.has-warning::after { color: $orange-400; }
 
     &.column--nested {
-      &:after { right: 1.5rem; bottom: 1.5rem; }
+      &::after { bottom: 1.5rem;
+        right: 1.5rem; }
       @media #{$tablet} {
-        &:last-of-type:after { right: 0.5rem; }
-        }
+        &:last-of-type::after { right: 0.5rem; }
+      }
     }
 
     //Removes default select icon in IE
@@ -152,8 +159,8 @@ fieldset {
   //Add class to containing fieldset to display optional text
   &.is-optional {
     label::after {
-      content: "(Optional)";
       color: $gray-500;
+      content: '(Optional)';
       font-weight: $font-weight-normal;
       margin-left: $space-xxs;
     }
@@ -169,8 +176,8 @@ fieldset {
     font-size: $font-size-small;
     list-style: none;
     margin: 0;
-    margin-top: -#{$space-s};
     margin-bottom: $space-m;
+    margin-top: -#{$space-s};
     overflow: auto;
     padding: 0;
     .dashing-icon { margin: 0 $space-xxs; }
@@ -179,9 +186,10 @@ fieldset {
   //Adds red text to lables and inputs for error states
   &.has-error,
   .has-error {
-    label, #{$inputs} {
-      color: $red;
+    label,
+    #{$inputs} {
       border-color: $red-200;
+      color: $red;
     }
 
     #{$inputs} {
@@ -197,9 +205,10 @@ fieldset {
   //Adds orange text to lables and inputs for warning states
   &.has-warning,
   .has-warning {
-    label, #{$inputs} {
-      color: $orange;
+    label,
+    #{$inputs} {
       border-color: $orange-300;
+      color: $orange;
     }
 
     #{$inputs} {
@@ -227,13 +236,13 @@ fieldset {
   fieldset,
   .radio-card,
   .checkbox-card {
-    flex: 1 1 auto;
     -ms-flex: 1 1 auto;
+    flex: 1 1 auto;
 
     @media #{$tablet} {
-      margin-right: 1rem;
-      flex: 1 1 0;
       -ms-flex: 1 1 auto;
+      flex: 1 1 0;
+      margin-right: 1rem;
       &:last-of-type { margin-right: 0; }
     }
   }
