--- a/src/sass/modules/grid/grid.scss
+++ b/src/sass/modules/grid/grid.scss
@@ -2,8 +2,8 @@
   =========================================================================== */
 
 *,
-*:before,
-*:after {
+*::before,
+*::after {
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
@@ -36,8 +36,8 @@ html {
   padding-left: 0 !important;
 
   &.column--nested { //When nesting columns within other containers (cards, containers, modals, etc.) use the ".nested" class to remove some unnecessary padding
-    padding-top: calc((#{$grid-gutter}) / 2);
     padding-bottom: calc((#{$grid-gutter}) / 2);
+    padding-top: calc((#{$grid-gutter}) / 2);
     @media #{$phone} { padding-right: 0; }
     @media #{$tablet} { &:last-of-type { padding-right: 0; } }
   }
@@ -83,8 +83,8 @@ html {
 }
 
 @mixin flex($item) {
-  -webkit-flex: $item;
   -moz-box-flex: $item;
+  -webkit-flex: $item;
   flex: $item;
 }
 
