--- a/src/sass/modules/modal/modal.scss
+++ b/src/sass/modules/modal/modal.scss
@@ -1,16 +1,17 @@
 .prevent-scrolling { overflow: hidden; }
 
 .dash-overlay {
-  background-color: rgba($black, 0.80);
-  overflow-x: hidden;
-  overflow-y: auto;
-  -webkit-overflow-scrolling: touch;
-  position: fixed;
-  top: 0;
-  right: 0;
+  background-color: rgba($black, 0.8);
   bottom: 0;
   left: 0;
+  -webkit-overflow-scrolling: touch;
+  overflow-x: hidden;
+  overflow-y: auto;
+  position: fixed;
+  right: 0;
+  top: 0;
   z-index: 1000;
+
   &.is-locked {
     overflow: hidden;
   }
@@ -19,26 +20,28 @@
 .dash-modal {
   background-color: $white;
   border-radius: 15px;
+  cursor: default;
   margin: 1.5rem auto;
   max-width: 35rem;
   outline: 0;
+  overflow: hidden;
   width: 90%;
   z-index: 1050;
-  cursor: default;
-  overflow: hidden;
 
   @media #{$tablet} {
-    margin: 5rem auto 5rem auto;
+    margin: 5rem auto;
   }
 
   &.modal-small { max-width: 25rem; }
   &.modal-large { max-width: 45rem; }
 
-  .modal-header, .modal-content, .modal-footer {
+  .modal-header,
+  .modal-content,
+  .modal-footer {
     padding: $grid-gutter;
 
     hr {
-      border: none;
+      border: 0;
       border-bottom: 2px solid $gray-150;
       margin: $grid-gutter (-$grid-gutter);
     }
@@ -46,13 +49,13 @@
 
   .modal-close {
     @include user-select(none);
+    cursor: pointer;
     float: right;
     font-size: 1.5rem;
-    position: relative;
-    right: .7rem;
-    top: .7rem;
-    cursor: pointer;
     margin-left: -2rem;
+    position: relative;
+    right: 0.7rem;
+    top: 0.7rem;
   }
 
   .modal-header {
@@ -66,20 +69,20 @@
     }
 
     &.has-video {
-      padding: 0;
-      position: relative;
-      padding-bottom: 56.3%;
       height: 0;
-      overflow: hidden;
       max-width: 100%;
+      overflow: hidden;
+      padding: 0;
+      padding-bottom: 56.3%;
+      position: relative;
       transform: translateY(0);
 
       iframe {
+        height: 100%;
+        left: 0;
         position: absolute;
         top: 0;
-        left: 0;
         width: 100%;
-        height: 100%;
       }
     }
 
@@ -88,5 +91,5 @@
   }
 
   .modal-footer { background-color: $gray-100; }
-  .dashing-icon--close:before { color: #555 !important; }
+  .dashing-icon--close::before { color: #555 !important; }
 }
