--- a/src/sass/modules/tooltip/_tooltip.scss
+++ b/src/sass/modules/tooltip/_tooltip.scss
@@ -5,69 +5,72 @@ $clippy-color: $white;
 .has-tooltip { @include user-select(none); }
 
 //MODULE
-i.paragon-tooltip,
-i.paragon-clippy {
-	@extend .dashing-icon;
-	@extend .dashing-icon--question-filled;
-	@extend .dashing-icon--gray;
-	cursor: help;
+.paragon-tooltip,
+.paragon-clippy {
+  @extend .dashing-icon;
+  @extend .dashing-icon--question-filled;
+  @extend .dashing-icon--gray;
+  cursor: help;
   display: inline-block;
 
   @media #{$phone} {
+    border-radius: 50px;
     margin: -0.6rem -0.4rem !important;
     padding: 0.6rem;
-    border-radius: 50px;
     &:hover { background-color: rgba(85, 85, 85, 0.1); }
   }
 }
 
 span .paragon-tooltip,
 p .paragon-tooltip,
-label .paragon-clippy {
+label .paragon-clippy,
+i .paragon-clippy,
+i .paragon-tooltip {
   margin-left: 0.2rem;
 }
-
-span.paragon-tooltip { display: inline-block; }
 
 /* Custom Tippy.js Themes
   =========================================================================== */
 .tippy-tooltip {
+  &.default-theme {
+    background-color: $tooltip-color;
+    border: 0;
+    border-radius: 5px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+    .tippy-backdrop { background-color: $tooltip-color; }
 
-	&.default-theme {
-		background-color: $tooltip-color;
-		box-shadow: 0 4px 8px rgba(0,0,0, 0.3);
-	  border: none;
-		border-radius: 5px;
-		.tippy-backdrop { background-color: $tooltip-color; }
-		.tippy-content {
-			font-weight: 600;
-			font-size: 0.9rem;
-			line-height: 1.1rem;
-		}
-		.tippy-roundarrow {
-			fill: $tooltip-color;
-		}
-	}
+    .tippy-content {
+      font-size: 0.9rem;
+      font-weight: 600;
+      line-height: 1.1rem;
+    }
 
-	&.clippy-theme {
-		border: 2px solid $gray-200;
-		box-shadow: 0 4px 8px rgba(0,0,0, 0.2) !important;
-		border-radius: 5px;
-		background-color: $clippy-color;
-		.tippy-backdrop { background-color: $clippy-color; }
-		.tippy-content {
-			font-weight: 400;
-			font-size: 0.9rem;
-			line-height: 1.2rem;
-			padding: 0;
-			color: $gray-900;
-			text-align: left;
-			padding: 0.2rem;
+    .tippy-roundarrow {
+      fill: $tooltip-color;
+    }
+  }
 
-			h4, p { font-size: 0.9rem; }
-			p { line-height: 1.2rem; }
-			h4 { font-weight: 600;}
-			a { margin-top: 0.5rem; }
-		}
-	}
+  &.clippy-theme {
+    background-color: $clippy-color;
+    border: 2px solid $gray-200;
+    border-radius: 5px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2) !important;
+    .tippy-backdrop { background-color: $clippy-color; }
+
+    .tippy-content {
+      color: $gray-900;
+      font-size: 0.9rem;
+      font-weight: 400;
+      line-height: 1.2rem;
+      padding: 0;
+      padding: 0.2rem;
+      text-align: left;
+
+      h4,
+      p { font-size: 0.9rem; }
+      p { line-height: 1.2rem; }
+      h4 { font-weight: 600;}
+      a { margin-top: 0.5rem; }
+    }
+  }
 }
