--- a/src/sass/paragon.scss
+++ b/src/sass/paragon.scss
@@ -1,6 +1,6 @@
-@import "vendor/vendor";
-@import "base/base";
-@import "modules/modules";
+@import 'vendor/vendor';
+@import 'base/base';
+@import 'modules/modules';
 
 @font-face {
   font-family: 'dashing-icons';
